hphp/hack/doc/hack-langspec/tests/Classes/require_extends_implements.php.expectf

Fatal error: Traits cannot have constants in %s/tests/Classes/require_extends_implements.php on line 35